Fix align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ hr{
 .headerta .align{
 	position: relative;
 	margin: 0px auto;
-	width: 07%;
+	width: 70%;
 }
 
 .headerta .boxcenter{
